fix table overflow

--- a/src/app/pages/runner-list/runner-list.component.scss
+++ b/src/app/pages/runner-list/runner-list.component.scss
@@ -4,8 +4,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 120px);
   padding: 30px 50px;
+  overflow-y: scroll;
 }
 
 .runner-table {
